# ckd

./: .dockerignore  .exrc  .gitignore  .gitlab-ci.yml  .hadolint.yaml  CMakeLists.txt  Dockerfile  Dockerfile.gcc  LICENSE.md  Makefile  README.md  compile_commands.json
.github/workflows/: build.yml  static.yml
_build/include/: ckdint.h  ckdint_small.h
sampleusage/: CMakeLists.txt  Makefile  example-CPM.cmake  example-fetchcontent.cmake  main.c
scripts/: measure.sh  test.sh
src/: ckdint.h  ckdint.h.py  library.jinja  script.py
src/ckdint/: ckdint_gnu.h  ckdint_nognu.h
tests/: add_coverage.c  mixing.h  test.h  test1.c  test2.c  test_char.c  test_chosen.c  test_ckdresult.c  test_curious.c  test_from_paper.c  test_int128.c  test_internal.c  test_issue_3.c  test_mixing.c  test_mixing1.c  test_mixing2.c  test_mixing3.c  test_mk.c  test_more.c  test_more2.c  test_more3.c  test_multiple.c  test_nognu.c  test_nognu_vs_gnu.c  test_nongnu_operators.c  test_sideeffects.c  test_simple.c  test_someedgecases.c  test_someusecases.c  test_ssu.c  test_stdints.c  test_tosmaller.c  test_variousargs.c  test_vectors.h  test_vectors_char.c  test_vectors_int.c  test_vectors_int128_t.c  test_vectors_long.c  test_vectors_longlong.c  test_vectors_schar.c  (+7 more)
